examples/security/security-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-test-nonroot
  namespace: kind-demo
spec:
  restartPolicy: Never
  containers:
    - name: test
      image: busybox:1.36
      command: ["sh", "-c", "id && sleep 5"]
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        allowPrivilegeEscalation: false
        capabilities:
          drop: ["ALL"]
        seccompProfile:
          type: RuntimeDefault
      resources:
        requests:
          cpu: 5m
          memory: 8Mi
        limits:
          cpu: 20m
          memory: 16Mi
